updated index with js

--- a/index.html
+++ b/index.html
@@ -5,8 +5,27 @@
 <title>Public library Home</title>
 <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
 <link href="css/style.css" rel='stylesheet' type='text/css' />
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="keywords" content="University Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
+Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
+<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+<script src="js/jquery.min.js"></script>
+ <script src="js/bootstrap.js"></script>
 </head>
 <body>
+<script src="js/responsiveslides.min.js"></script>
+<script>  
+    $(function () {
+      $("#slider").responsiveSlides({
+      	auto: true,
+      	nav: true,
+      	speed: 500,
+        namespace: "callbacks",
+        pager: true,
+      });
+    });
+  </script>  
 <div class="banner">	  
 	 <div class="header">
 			 
@@ -20,13 +39,25 @@
 					 <li><a href="contact.html">Contact</a></li>
 				 </ul>
 			 </div>
-<div class="clearfix"></div></div>
+<!-- script-for-menu -->
+		 <script>
+				$("span.menu").click(function(){
+					$("ul.navig").slideToggle("slow" , function(){
+					});
+				});
+		 </script>
+		 <!-- script-for-menu -->
+
+			 <div class="clearfix"></div>
+	 </div>
 	 <div class="slider">
 		 <div class="caption">
 			 <div class="container">
 				  <div class="callbacks_container">
 					  <ul class="rslides" id="slider">
 						    <li><h3>Public Library</h3></li>
+							<li><h3>Open your world</h3></li>	
+							<li><h3>For the people. By the people</h3></li>	
 					  </ul>	
 						<div class="clearfix"></div>
 				  </div>
